fix(tools): add dark overlay to background image for better text contrast

--- a/dev/sass/media/_media_max_width768.scss
+++ b/dev/sass/media/_media_max_width768.scss
@@ -6,6 +6,7 @@
     }
 
     .container-tools {
+        background-color: rgb(0, 0, 0, 0.3);
         .text-wrapper {
             padding: 72px 20px;
         }
